# soccer_prediction_py

./: .env.template  .gitignore  CLAUDE.md  STARTUP_GUIDE.md  TODO.md  docker-compose.yml  package.json  pyproject.toml  remember.txt  soccer_prediction.mmd  tailwind.config.js
docker/: Dockerfile
docs/: DATABASE_SCHEMA.md
models/: match_predictor_metadata.json
scripts/: test_odds_api.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/api/routes/: ml.py  odds.py  predictions.py
src/clients/: __init__.py  api_football_client.py  football_data_client.py  odds_api_client.py
src/db/: __init__.py  config.py  init_db.py  models.py
src/ml/: __init__.py  features.py  model.py  train_baseline.py
src/scraper/: __init__.py  fbref_scraper.py  pipeline.py
src/static/: index.html
src/static/css/: input.css  output.css
src/static/js/: app.js
tests/: __init__.py  test_api_endpoints.py  test_api_football_client.py  test_database.py  test_fbref_scraper.py  test_football_data_client.py  test_ml.py  test_odds_api_client.py  test_pipeline.py
